2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs, Tomboy/Note.cs, Tomboy/TomboySyncClient.cs:
	  Note revision now stored in the client's local manifest.xml,
	  instead of being coupled with the note data.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncManager.cs: Set syncThread to null before returning from
	  the sync thread method.  This is important because if it's not
	  null, it won't sync properly the next time around.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: Bringing back clobbered change (adding new
	  notes with NoteMgr.CreateWithGuid followed by
	  note.LoadForeignNoteXml).

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Moved TitleConflictResolution to
	  SyncTitleConflictResolution.
	* Tomboy/SyncManager.cs: Renamed
	  SyncTitleConflictDialog.TitleConflictResolution ->
	  SyncTitleConflictResolution.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Started the conflict resolution in the GUI.
	* Tomboy/SyncManager.cs: Handle conflict resolution in the GUI and not
	  in the sync thread.

2007-06-27  Boyd Timothy <btimothy@gmail.com> 

	* Tomboy/SyncDialog.cs: Respond to the events being sent from the
	  SyncManager to update the GUI.
	* Tomboy/SyncManager.cs: Do the synchronization on a thread so the GUI
	  doesn't lock.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Note.cs: Remove all note tags before parsing XML in
	  LoadForeignNoteXml.  Adding and removing tags now updates a note's
	  last changed date.

2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/SyncManager.cs: When adding a note from the server, use
	  NoteManager.CreateWithGuid followed by Note.LoadForeignNoteXml. 
	  This allows the note XML to be verified by LoadForeignNoteXml
	  before it actually gets into Tomboy.
	* Tomboy/NoteManager.cs: Refactor NoteManager.Create* methods to allow