@@ -1,5 +1,14 @@
 2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
+	* Tomboy/SyncManager.cs: Set note revision after updating note XML from
+	  server.
+	* Tomboy/Note.cs: Apply fix for bug #440562 from John Carr, so that
+	  setting the Note.XmlContent property formats notes properly. 
+	  LoadForeignNoteXml now sets note content via the XmlContent
+	  property.
+
+2007-06-27  Sandy Armstrong <sanfordarmstrong@gmail.com> 
+
 	* Tomboy/SyncManager.cs, Tomboy/Note.cs, Tomboy/TomboySyncClient.cs:
 	  Note revision now stored in the client's local manifest.xml,
 	  instead of being coupled with the note data.
